syntax = "proto3";

package products_customer;
option go_package = "./";

service ProductsCustomerService {
  rpc Category (CategoryRequest) returns (CategoryResponse) {}
  rpc Product (ProductRequest) returns (ProductResponse) {}
  rpc SearchProduct (SearchProductRequest) returns (SearchProductResponse) {}
  rpc Discount (DiscountRequest) returns (DiscountResponse) {}
  rpc GetStock (GetStockRequest) returns (GetStockResponse) {}
}

message CategoryRequest {
  string id = 1;
}

message CategoryResponse {
  repeated string product_ids = 1;
  string message = 2;
}

message ProductRequest {
  string product_id = 1;
}

message ProductResponse {
  string name = 1;
  string description = 2;
  string image = 3;
  float price = 4;
  float discount = 5;
  string category = 6;
  string message = 7;
}

message SearchProductRequest {
  string prefix = 1;
  string category = 2;
  float min_price = 3;
  float max_price = 4;
  bool has_discount = 5;
}

message SearchProductResponse {
  repeated string product_ids = 1;
  string message = 2;
}

message DiscountRequest{
}

message DiscountResponse {
  repeated string product_ids = 1;
  string message = 2;
}

message GetStockRequest {
  string product_id = 1;
  string market_id = 2;
}

message GetStockResponse {
  int32  stock = 1;
  string message = 2;
}